--- a/debian/control
+++ b/debian/control
@@ -24,4 +24,4 @@ Description: FITS and MeqTrees LSM viewer, python 2 library
 Package: tigger
 Architecture: any
 Depends: python-tigger
-Description: FITS and MeqTrees LSM viewer
+Description: dependency package for FITS and MeqTrees LSM viewer
