--- a/debian/control
+++ b/debian/control
@@ -7,18 +7,30 @@ Build-Depends:
  dh-python,
  python-all,
  python-setuptools,
- python-kittens,
+ python-astro-kittens,
+ python-astro-tigger-lsm,
  python-qt4,
  python-qwt5-qt4
 Standards-Version: 3.9.7
 Homepage: https://github.com/ska-sa/tigger
 X-Python-Version: 2.7
 
-Package: python-tigger
+Package: python-astro-tigger
+Replaces: python-tigger
 Architecture: any
-Depends: ${python:Depends}, ${misc:Depends}, python-kittens, python-pyfits,
- python-astlib, python-scipy, python-numpy, python-qt4, python-qwt5-qt4,
- libicu55
+Depends:
+ ${python:Depends},
+ ${misc:Depends},
+ ${sh:Depends},
+ python-astro-kittens,
+ python-pyfits,
+ python-astlib,
+ python-scipy,
+ python-numpy,
+ python-qt4,
+ python-qwt5-qt4,
+ python-astro-tigger-lsm,
+ libicu60
 Description: FITS and MeqTrees LSM viewer, python 2 library
 
 Package: tigger
