--- a/debian/control
+++ b/debian/control
@@ -3,19 +3,27 @@ Section: python
 Priority: extra
 Maintainer: KERN packaging <packaging@kernsuite.info>
 Build-Depends:
- debhelper (>= 8.0.0),
+ debhelper (>= 9),
  build-essential,
  dh-python,
  python-all,
+ python3-all,
  python-setuptools,
+ python3-setuptools,
  python-astro-kittens,
+ python3-astro-kittens,
  python-astro-tigger-lsm,
+ python3-astro-tigger-lsm,
  python-qt4,
+ python3-pyqt4,
  python-qwt5-qt4,
- python-astropy
-Standards-Version: 3.9.7
+ python3-pyqt5,
+ python-astropy,
+ python3-astropy
+Standards-Version: 4.4.1
 Homepage: https://github.com/ska-sa/tigger
 X-Python-Version: 2.7
+X-Python3-Version: 3.6
 
 Package: python-astro-tigger
 Replaces: python-tigger
@@ -36,6 +44,26 @@ Depends:
  libicu60,
  libcanberra-gtk-module
 Description: FITS and MeqTrees LSM viewer, python 2 library
+
+Package: python3-astro-tigger
+Replaces: python-tigger
+Architecture: any
+Depends:
+ ${python3:Depends},
+ ${misc:Depends},
+ ${sh:Depends},
+ python3-astropy,
+ python3-astro-kittens,
+ python3-pyfits,
+ python3-astlib,
+ python3-scipy,
+ python3-numpy,
+ python3-pyqt5,
+ python3-pyqt4,
+ python3-astro-tigger-lsm,
+ libicu60,
+ libcanberra-gtk-module
+Description: FITS and MeqTrees LSM viewer, python 3 library
 
 Package: tigger
 Architecture: any
