--- a/debian/rules
+++ b/debian/rules
@@ -5,4 +5,4 @@ export DH_VERBOSE=1
 export PYBUILD_NAME=astro-tigger
 
 %:
-	dh $@ --with python2 --buildsystem=pybuild
+	dh $@ --with python2,python3 --buildsystem=pybuild --parallel
