--- a/debian/rules
+++ b/debian/rules
@@ -1,8 +1,14 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
-#
+# You must remove unused comment lines for the released package.
+#export DH_VERBOSE = 1
+#export DEB_BUILD_MAINT_OPTIONS = hardening=+all
+#export DEB_CFLAGS_MAINT_APPEND  = -Wall -pedantic
+#export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 export DH_VERBOSE=1
 export PYBUILD_NAME=astro-tigger
 
 %:
-	dh $@ --with python2,python3 --buildsystem=pybuild --parallel
+	dh $@ --with python3 --buildsystem=pybuild 
+
+override_dh_python3:
+	dh_python3 --shebang=/usr/bin/python3
